added search by notes

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <form class="main-form">
             <input class="main-form__input" type="text" placeholder="Введите название">
             <button class="main-form__button" type='button'>Добавить в список</button>
+            <input class="main-form__filter" type="text" placeholder="Поиск заметки">
         </form>
 
         <ul class="notes-list">
