Added buttons for filtering notes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body class="page-body">
 
     <header class="page-header">
+        <button class="button button--done" type='button' id="filter-needed"></button>
         <h1 class="main-title">List of Notes</h1>
+        <button class="button completed" type='button' id="filter-completed"></button>
+
     </header>
 
     <main class="page-main">
